# modorganizer-archive

./: .git-blame-ignore-revs  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  appveyor.yml  vcpkg.json
.github/workflows/: build.yml  linting.yml
cmake/: config.cmake.in
include/archive/: archive.h
src/: CMakeLists.txt  Find7zip.cmake  FindWindowsSDK.cmake  SConscript  StdAfx.h  archive.cpp  archive.h  archive.pro  callback.cpp  callback.h  extractcallback.cpp  extractcallback.h  fileio.cpp  fileio.h  formatter.h  inputstream.cpp  inputstream.h  instrument.h  interfaceguids.cpp  library.h  msvc_pch_support.cmake  multioutputstream.cpp  multioutputstream.h  opencallback.cpp  opencallback.h  propertyvariant.cpp  propertyvariant.h  unknown_impl.h  version.rc
